Running one worker per machine (multiple cores)